# nibbler

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  alltest.sh  boucle.sh  bug  client.sh  cmake_install.cmake  error  error_issue  i  input_client.ini  input_server.ini  lauch.sh  monFichierTest  nibbler  nibbler.cbp  output_test  right  save.json  saveMakefile  server.sh  start.ini  test.sh  while  work.txt
.todo/: info  (+1 more)
dynamicLibrariesSources/display_glfw/: .gitignore  CMakeLists.txt  display_glfw.cbp.tmp
dynamicLibrariesSources/display_glfw/shader/: basic.vert  basicMultiple.vert
dynamicLibrariesSources/display_glfw/src/: ActModel.cpp  ActModel.hpp  Camera.cpp  Camera.hpp  DisplayGlfw.cpp  DisplayGlfw.hpp  Engine.hpp  Glfw.cpp  Glfw.hpp  Light.cpp  Light.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Particle.cpp  Particle.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Transform.cpp  Transform.hpp  main.cpp
dynamicLibrariesSources/display_sdl/: CMakeLists.txt
dynamicLibrariesSources/display_sdl/include/: DisplaySdl.hpp
dynamicLibrariesSources/display_sdl/src/: DisplaySdl.cpp  DisplaySdl.hpp
dynamicLibrariesSources/display_sfml/: CMakeLists.txt
dynamicLibrariesSources/display_sfml/src/: DisplaySfml.cpp  DisplaySfml.hpp
dynamicLibrariesSources/sound_sdl/: CMakeLists.txt
dynamicLibrariesSources/sound_sdl/src/: SoundSdl.cpp  SoundSdl.hpp
dynamicLibrariesSources/sound_sfml/: CMakeLists.txt  compile.sh
dynamicLibrariesSources/sound_sfml/src/: SoundSfml.cpp  SoundSfml.hpp
externlib/display_minilibx/: CMakeLists.txt
externlib/display_sdl/: CMakeLists.txt  Makefile
externlib/display_sdl/include/: DisplaySdl.hpp
externlib/display_sdl/src/: DisplaySdl.cpp
nibblerSources/: CMakeLists.txt
nibblerSources/class/: Univers.cpp  Univers.hpp
nibblerSources/class/KINU/: Component.hpp  Config.hpp  Entity.cpp  Entity.hpp  EventsManager.cpp  EventsManager.hpp  Pool.hpp  SystemsManager.cpp  SystemsManager.hpp  World.cpp  World.hpp
nibblerSources/class/KNW/: BaseDataType.cpp  BaseDataType.hpp  ClientTCP.cpp  ClientTCP.hpp  Config.hpp  DataTCP.cpp  DataTCP.hpp  IOManager.cpp  IOManager.hpp  IOTCP.cpp  IOTCP.hpp  ServerTCP.cpp  ServerTCP.hpp
nibblerSources/class/component/: CollisionComponent.cpp  CollisionComponent.hpp  FollowComponent.cpp  JoystickComponent.hpp  PositionComponent.cpp  PositionComponent.hpp  SpriteComponent.hpp
nibblerSources/class/cores/: ADynamicLinkLibrary.hpp  DisplayDynamicLibrary.hpp  DynamicLinkLibrary.cpp  DynamicLinkLibrary.hpp  ExternalLibraryDisplayManager.cpp  ExternalLibraryDisplayManager.hpp  ExternalLibraryManager.cpp  ExternalLibraryManager.hpp  ExternalLibrarySoundManager.cpp  ExternalLibrarySoundManager.hpp  GameManagement.cpp  GameManagement.hpp  GameManager.cpp  GameManager.hpp  Snake.cpp  Snake.hpp  SoundDynamicLibrary.cpp  SoundDynamicLibrary.hpp  Test.cpp  Test.hpp  Univers.cpp  Univers.hpp  main.cpp
nibblerSources/class/dynamicLinkLibrary/: ADynamicLinkLibrary.cpp  ADynamicLinkLibrary.hpp  DisplayDynamicLibrary.cpp  DisplayDynamicLibrary.hpp  SoundDynamicLibrary.hpp
nibblerSources/class/events/: FoodCreation.cpp  FoodCreation.hpp  FoodEat.cpp  FoodEat.hpp  JoystickEvent.hpp  StartEvent.cpp
nibblerSources/class/factory/: Factory.cpp  Factory.hpp
nibblerSources/class/gui/: Core.cpp  Core.hpp  Gui.cpp  Gui.hpp  GuiData.hpp
nibblerSources/class/gui/widget/: AWidget.cpp  AWidget.hpp  SpriteColorProperties.hpp  WidgetChat.cpp  WidgetChat.hpp  WidgetConnect.cpp  WidgetConnect.hpp  WidgetEtat.cpp  WidgetEtat.hpp  WidgetExit.cpp  WidgetExit.hpp  WidgetLobby.cpp  WidgetLobby.hpp  WidgetMassiveButton.cpp  WidgetMassiveButton.hpp  WidgetOption.cpp  WidgetOption.hpp  WidgetServerPannel.cpp  WidgetServerPannel.hpp  WidgetSettingGame.cpp  WidgetSettingGame.hpp  WidgetSnake.cpp  (+1 more)
nibblerSources/class/ia/: AStar.cpp  AStar.hpp  Bobby.cpp  Bobby.hpp  KStar.cpp  KStar.hpp
nibblerSources/class/network/: ClientTCP.cpp  ClientTCP.hpp  Data.hpp  ISnakeNetwork.hpp  ServerTCP.cpp  ServerTCP.hpp  SnakeClient.cpp  SnakeClient.hpp  SnakeServer.cpp  SnakeServer.hpp  UtilsTCP.hpp
nibblerSources/class/systems/: CollisionSystem.cpp  CollisionSystem.hpp  FollowSystem.cpp  FollowSystem.hpp  FoodCreationSystem.cpp  FoodCreationSystem.hpp  FoodEatSystem.cpp  JoystickSystem.cpp  JoystickSystem.hpp  MotionSystem.cpp  MotionSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SpriteSystem.cpp  SpriteSystem.hpp
nibblerSources/incs/: Config.hpp  Display2D.cpp  Display2D.hpp  IDisplay.hpp  ISound.hpp  IWidget.hpp  KeyState.cpp  KeyState.hpp  KeyStateManager.cpp  KeyStateManager.hpp  MutantGrid.tpp  Sprite.hpp  Vector2D.tpp  logger.h  logger_utils.h  nibbler.hpp
nibblerSources/srcs/KINU/: Component.cpp  Config.hpp  Entity.cpp  Entity.hpp  EventsManager.cpp  EventsManager.hpp  World.hpp
nibblerSources/srcs/KNW/: ClientTCP.cpp  ClientTCP.hpp  DataTCP.cpp  DataTCP.hpp  IOManager.cpp  IOManager.hpp  IOTCP.cpp  ServerTCP.cpp  ServerTCP.hpp
nibblerSources/srcs/component/: CollisionComponent.cpp  CollisionComponent.hpp  JoystickComponent.cpp  PositionComponent.hpp
nibblerSources/srcs/cores/: GameManager.cpp  GameManager.hpp  Snake.cpp  Snake.hpp  Test.cpp  Univers.cpp  Univers.hpp  main.cpp
nibblerSources/srcs/dynamicLinkLibrary/: ADynamicLinkLibrary.hpp  DisplayDynamicLibrary.cpp  DisplayDynamicLibrary.hpp  SoundDynamicLibrary.cpp
nibblerSources/srcs/events/: FoodEat.hpp  NextFrame.hpp  StartEvent.hpp
nibblerSources/srcs/factory/: Factory.cpp  Factory.hpp
nibblerSources/srcs/gui/: Gui.cpp  Gui.hpp
nibblerSources/srcs/ia/: Bobby.cpp  Bobby.hpp  KStar.cpp  KStar.hpp
nibblerSources/srcs/network/: Data.hpp  ISnakeNetwork.hpp  SnakeClient.cpp  SnakeClient.hpp  SnakeServer.cpp  SnakeServer.hpp  UtilsTCP.cpp  UtilsTCP.hpp
nibblerSources/srcs/systems/: CollisionSystem.cpp  CollisionSystem.hpp  FollowSystem.hpp  FoodCreationSystem.cpp  FoodEatSystem.cpp  FoodEatSystem.hpp  JoystickSystem.cpp  MotionSystem.cpp  MotionSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SpriteSystem.cpp  SpriteSystem.hpp
(+373 files in other folders)
